@@ -1072,7 +1072,7 @@ configuration or data files are not writable.</p>
       <td colspan="3" class="subheader">Sound</td>
     </tr>
     <tr>
-      <td><a href="http://www.pouet.net/prod.php?which=56822">Hextracker</a></td>
+      <td><a href="http://dhs.nu/files.php?t=single&ID=135">Hextracker</a></td>
       <td>1.5</td>
       <td>Uses non-standard mouse event scaling factor.
           Mouse cannot traverse whole Hatari window unless
@@ -1964,7 +1964,7 @@ does only on STE</td>
   </thead>
   <tbody>
     <tr>
-      <td><a href="http://www.atari-forum.com/viewtopic.php?f=28&t=20760">Hextracker</a> (0.849b)</td>
+      <td><a href="http://dhs.nu/files.php?t=single&ID=135">Hextracker</a> (0.849b)</td>
       <td class="minor">2.0</td>
       <td>Uses non-standard mouse event scaling factor.
           Mouse cannot (vertically) traverse whole Hatari window
@@ -4133,9 +4133,9 @@ site.</p>
     </tr>
     <tr>
       <td><a href="http://dhs.nu/files.php?t=single&ID=135">Hextracker</a></td>
-      <td class="major">2.0+</td>
+      <td>2.0+</td>
       <td>-</td>
-      <td>Crashes during program startup</td>
+      <td>Crashes if auto-started with TOS v4 (works with other TOS versions)</td>
     </tr>
     <tr>
       <td><a href="http://pouet.net/prod.php?which=29348">Indypaint</a></td>
